syntax = "proto3";

package books;

service BookService {
  rpc GetAll (Empty) returns (BooksList) {}
  rpc GetById (BookById) returns (Book) {}
  rpc GetByName (BookByName) returns (Book) {}
  rpc Insert (Book) returns (Book) {}
  rpc Update (Book) returns (Book) {}
  rpc Remove (BookById) returns (Empty) {}
}

message Empty {}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  string type = 5;
  float price = 6;
  int32 quantity = 7;
}

message BooksList {
  repeated Book books = 1;
}

message BookById {
  string id = 1;
}

message BookByName {
  string name = 1;
}

